--- a/spring-mybatis-01/pom.xml
+++ b/spring-mybatis-01/pom.xml
@@ -18,6 +18,7 @@
         <mysql.version>5.1.39</mysql.version>
         <spring.version>4.3.20.RELEASE</spring.version>
         <mybatis.spring.version>1.3.2</mybatis.spring.version>
+        <elasticsearch.version>5.4.3</elasticsearch.version>
     </properties>
 
     <dependencies>
@@ -199,6 +200,17 @@
             <artifactId>mapper</artifactId>
             <version>${mapper.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>${elasticsearch.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
