--- a/spring-mybatis-01/pom.xml
+++ b/spring-mybatis-01/pom.xml
@@ -13,12 +13,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
         <mybatis.version>3.4.6</mybatis.version>
+        <mybatis.generator.version>1.3.7</mybatis.generator.version>
         <mapper.version>4.0.3</mapper.version>
         <pagehelper.version>5.1.4</pagehelper.version>
         <mysql.version>5.1.39</mysql.version>
         <spring.version>4.3.20.RELEASE</spring.version>
         <mybatis.spring.version>1.3.2</mybatis.spring.version>
         <elasticsearch.version>5.4.3</elasticsearch.version>
+        <jackson.version>2.9.7</jackson.version>
+        <aspectj.version>1.9.2</aspectj.version>
+        <log4j.version>2.11.1</log4j.version>
+        <druid.version>1.1.12</druid.version>
     </properties>
 
     <dependencies>
@@ -125,29 +130,29 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
-            <version>2.9.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <!--spring-aop依赖-->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.8.2</version>
+            <version>${aspectj.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.11.1</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.11.1</version>
+            <version>${log4j.version}</version>
         </dependency>
         <!--上传文件-->
         <dependency>
@@ -155,18 +160,16 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.1</version>
         </dependency>
-
         <!--mysql-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
-        <!--druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.2</version>
+            <version>${druid.version}</version>
         </dependency>
 
         <!--Mybatis-->
