--- a/spring-mybatis-01/src/main/webapp/WEB-INF/web.xml
+++ b/spring-mybatis-01/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,6 @@
         <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!-- 配置springMVC需要加载的配置文件
-            spring-dao.xml,spring-service.xml,spring-web.xml
             Mybatis - > spring -> springmvc
          -->
         <init-param>
@@ -56,21 +55,17 @@
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-
     <!--druid ==> WEB方式监控配置-->
     <servlet>
         <servlet-name>DruidStatView</servlet-name>
         <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
         <init-param>
-            <!-- 用户名 -->
             <param-name>loginUsername</param-name>
-            <param-value>pc859107393</param-value>
+            <param-value>pcuser</param-value>
         </init-param>
         <init-param>
-            <!-- 密码 -->
             <param-name>loginPassword</param-name>
-            <param-value>laopo5201314</param-value>
+            <param-value>pcpassword</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
