--- a/spring-mybatis-01/pom.xml
+++ b/spring-mybatis-01/pom.xml
@@ -24,6 +24,7 @@
         <aspectj.version>1.9.2</aspectj.version>
         <log4j.version>2.11.1</log4j.version>
         <druid.version>1.1.21</druid.version>
+        <h2.version>1.4.200</h2.version>
     </properties> 
 
     <dependencies>
@@ -165,6 +166,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
