--- a/spring-mybatis-01/src/main/resources/jdbc.properties
+++ b/spring-mybatis-01/src/main/resources/jdbc.properties
@@ -1,5 +1,12 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/springdb?useUnicode=true&characterEncoding=utf8&autoReconnect=true
-jdbc.username=root
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/springdb?useUnicode=true&characterEncoding=utf8&autoReconnect=true
+#jdbc.username=root
 #jdbc.password=laopo5201314
-jdbc.password=123456
+#jdbc.password=123456
+#use DBeaver6 to create H2 database test-db
+#https://stackoverflow.com/questions/55349373/database-not-found-and-ifexists-true-so-we-cant-auto-create-it
+jdbc.driver=org.h2.Driver
+jdbc.url=jdbc:h2:D:/data/h2data/test;IFEXISTS=true
+jdbc.username=sa
+jdbc.password=
+#jdbc.password=123456
